# gazebo-smart-navigation-challenge

./: README.md  bonus_grid.world  bonus_randomizer.py  package.xml  setup.py
real robot/: arduino.ino  autonomous_bridge.py  camera_vision.py  gazebo_tutorials.launch.py  grid_manager.py  hardware_bridge.py  package.xml  setup.py  web_dashboard.py
simulation/: collector_controller.py  gazebo_tutorials.launch.py  lidar.xacro  setup.py
